Fix preceding sentence shifting on mobile as cycling word changes length

--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ summary:focus-visible {
 }
 @media (max-width: 700px) {
   .element-cycle {
+    display: block;
     width: auto;
     text-align: center;
   }
